# quick_cppkh

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY.md
benchmarks/: pd_codes.txt  zip_random_100.txt  zip_random_selected.txt
docs/: ALGORITHM.md  BENCHMARKS.md
docs/assets/: quick_vs_cppkh_zip_random_100_runs.csv  quick_vs_cppkh_zip_random_100_summary.json  quick_vs_cppkh_zip_selected_runs.csv  quick_vs_cppkh_zip_selected_summary.json
python_project/quick_cppkh-interface/: README.md  pyproject.toml
python_project/quick_cppkh-interface/build_backend/: quick_cppkh_interface_build_backend.py
python_project/quick_cppkh-interface/quick_cppkh_interface/: __init__.py  main.py
src/: main.cpp
tools/: benchmark.py  benchmark_quick_cppkh_interface.py  build.py  test_cli_compatibility.py  test_upstream_cppkh_compatibility.py
